test/expected/unicode_error_offset.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "юникод"]
  [CompoundListCondition, None]
    [SimpleCommand "does_not_exist*"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "юникод"
]
[Word
  Unquoted "does_not_exist*"
]
юникод
shit: 2:14: error: A glob pattern in command position is rarely intended as a command name.
     2 |  echo юникод; does_not_exist*
       |               ^~~~~~~~~~~~~~~ here.
note: Quote it to run a literal name, or list the matches with compgen -G.
